envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: '0.0.0.0'
      port_value: 2100
static_resources:
  listeners:
  - name: pub
    address:
      socket_address: {address: '0.0.0.0', port_value: 2101}
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: pub_http
          use_remote_address: true
          xff_num_trusted_hops: 1
          route_config:
            name: whatever
            virtual_hosts:
            - name: local_service
              domains:
                - '*'
              routes:
              - match:
                  prefix: /yes
                  headers:
                    - name: x-forwarded-proto
                      exact_match: http
                direct_response: { status: 200, body: { inline_string: "yes\n" } }
              - match:
                  prefix: /yes
                  headers:
                    - name: x-forwarded-proto
                      exact_match: https
                direct_response: { status: 200, body: { inline_string: "yes https\n" } }
              - match: { prefix: /bin/ }
                request_headers_to_remove:
                  - 'X-Forwarded-Proto'
                request_headers_to_add:
                  - header:
                      key: 'X-Forwarded-Proto'
                      value: 'https'
                route:
                  prefix_rewrite: /
                  cluster: service_httpbin
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: service_httpbin
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    dns_lookup_family: v4_only
    hosts: [
      { socket_address: { address: tasks.httpbin, port_value: 80 } }
    ]
